# advent-of-code-leaderboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml.example
.github/workflows/: build.yaml  release-docker.yaml
src/: api.rs  config.rs  html.rs  leaderboard.html  main.rs  model.rs  parser.rs  utils.rs
