[package]
name = "advent-of-code-leaderboard"
version = "0.2.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
minijinja = "2.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["rustls-tls"]
